--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Erotic literature'
+- GITenberg
 title: Le Rideau levé; ou l'Education de Laure
 url: http://www.gutenberg.org/ebooks/26809
